@@ -6,7 +6,7 @@
 
 Start learning  by browsing the
 <a
-href="http://lilypond.org/doc/v1.8/Documentation/user/out-www/lilypond/lilypond.html#Tutorial">Tutorial</a>
+href="/doc/v1.8/Documentation/user/out-www/lilypond/Tutorial.html">Tutorial</a>
 
 <p>
 
@@ -21,7 +21,7 @@ Check out the documentation, which should be installed in
 </pre>
 <p>
 If it's not there, browse the  documentation <a
-href="http://lilypond.org/doc/">on-line</a>.
+href="/doc/">on-line</a>.
 
 <h2>Help!</h2>
 
